express crud done

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Creating REST API USING NODEJS EXPRESSJS MONGODB",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Vips120/REST_API_USING_EXPRESSJS_NODEJS#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joi": "^17.3.0"
   }
 }
