--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
   },
   "homepage": "https://github.com/Vips120/REST_API_USING_EXPRESSJS_NODEJS#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "config": "^3.3.2",
     "express": "^4.17.1",
-    "joi": "^17.3.0"
+    "fawn": "^2.1.5",
+    "helmet": "^4.2.0",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.13",
+    "morgan": "^1.10.0"
   }
 }
